force-app/main/default/objects/sked_Travel_Time_Slot__c/sked_Travel_Time_Slot__c.object-meta.xml
<CustomObject>
    <label>Travel Time Slot</label>
    <nameField>
        <label>Travel Time Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Time Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>