force-app/main/default/objects/sked_Travel_Time_Slot__c/fields/sked_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Travel Time Slots</relationshipLabel>
    <relationshipName>sked_Travel_Time_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>