force-app/main/default/objects/sked_Travel_Time_Slot__c/fields/sked_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_Time__c</fullName>
    <label>Start Time</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>