force-app/main/default/objects/sked_Travel_Time_Slot__c/fields/sked_Weekday__c.field-meta.xml
<CustomField>
    <fullName>sked_Weekday__c</fullName>
    <label>Weekday</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_Week</valueSetName>
    </valueSet>
</CustomField>